--- a/index.html
+++ b/index.html
@@ -16,14 +16,25 @@
 
 <body>
 
-    <h1 class="text-center">Array Carousel & Thumbnail</h1>
+    <h1 class="text-center">Array Object Carousel & Thumbnail</h1>
+    <div class="container my-5">
+        <div class="name text-center text-white fs-1">
+            <p>Marvel's Spiderman: Miles Morales</p>
+        </div>
+    </div>
     <div class="container d-flex justify-content-center">
         <div class="col-9">
             <div class="images">
+                <img class="img-fluid" src="/assets/img/01.webp" alt="">
             </div>
         </div>
         <div class="col-3">
             <div class="thumbnail">
+                <img src="/assets/img/01.webp" alt="">
+                <img src="/assets/img/02.webp" alt="">
+                <img src="/assets/img/03.webp" alt="">
+                <img src="/assets/img/04.webp" alt="">
+                <img src="/assets/img/05.webp" alt="">
             </div>
             <button class="prev"><i class="fa-solid fa-angle-up fa-2x"></i></button>
             <button class="next"><i class="fa-solid fa-angle-down fa-2x"></i></button>
@@ -32,6 +43,13 @@
     <div class="container-fluid my-5">
         <div class="col-12 text-center">
             <a href="https://github.com/LookasWasTaken"><button class="sub"><i class="linksub fa-brands fa-github fa-2x"></i></button></a>
+        </div>
+    </div>
+    <div class="container-fluid my-5 py-5">
+        <div class="col-12">
+            <div class="descriptions text-center text-white">
+                <p>Experience the rise of Miles Morales as the new hero masters incredible, explosive new powers to become his own Spider-Man.</p>
+            </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
