--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <title>Array Carousel & Thumbnail</title>
+    <title>Array Object Carousel & Thumbnail</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
@@ -19,13 +19,11 @@
     <h1 class="text-center">Array Object Carousel & Thumbnail</h1>
     <div class="container my-5">
         <div class="name text-center text-white fs-1">
-            <p>Marvel's Spiderman: Miles Morales</p>
         </div>
     </div>
     <div class="container d-flex justify-content-center">
         <div class="col-9">
             <div class="images">
-                <img class="img-fluid" src="/assets/img/01.webp" alt="">
             </div>
         </div>
         <div class="col-3">
@@ -48,7 +46,6 @@
     <div class="container-fluid my-5 py-5">
         <div class="col-12">
             <div class="descriptions text-center text-white">
-                <p>Experience the rise of Miles Morales as the new hero masters incredible, explosive new powers to become his own Spider-Man.</p>
             </div>
         </div>
     </div>
