--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a href="https://github.com/LookasWasTaken"><button class="sub"><i class="linksub fa-brands fa-github fa-2x"></i></button></a>
         </div>
     </div>
-    <div class="container-fluid my-5 py-5">
+    <div class="container-fluid py-5">
         <div class="col-12">
             <div class="descriptions text-center text-white">
             </div>
