--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
             <div class="descriptions text-center text-white">
             </div>
         </div>
+        <div class="col-12 text-center py-2">
+            <button class="backward"><i class="fa-solid fa-backward"></i></button>
+            <button class="play"><i class="fa-solid fa-play"></i></button>
+            <button class="stop"><i class="fa-solid fa-stop"></i></button>
+            <button class="forward"><i class="fa-solid fa-forward"></i></button>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
